# sample-fastapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: auth.py  database.py  models.py  schemas.py
app/routers/: posts.py  users.py
